baml_language/crates/baml_tests/snapshots/diagnostic_errors/optional_parameter_defaults/baml_tests__diagnostic_errors__optional_parameter_defaults__02_parser__unsupported_contexts.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TEMPLATE_STRING_DEF
    KW_TEMPLATE_STRING "template_string"
    WORD "Greeting"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "name"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
        EQUALS "="
        STRING_LITERAL "world"
          QUOTE """
          WORD "world"
          QUOTE """
      R_PAREN ")"
    RAW_STRING_LITERAL
      HASH "#"
      QUOTE """
      PROMPT_TEXT "hello"
        WORD "hello"
      TEMPLATE_INTERPOLATION "{{ name }}"
        L_BRACE "{"
        L_BRACE "{"
        WORD "name"
        R_BRACE "}"
        R_BRACE "}"
      QUOTE """
      HASH "#"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "NamedFilter"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "query"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      COMMA ","
      FUNCTION_TYPE_PARAM
        WORD "filter"
        QUESTION "?"
        COLON ":"
        TYPE_EXPR "string?"
          WORD "string"
          QUESTION "?"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "NamedLimit"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "query"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      COMMA ","
      FUNCTION_TYPE_PARAM
        WORD "limit"
        QUESTION "?"
        COLON ":"
        TYPE_EXPR "string?"
          WORD "string"
          QUESTION "?"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Counter"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "int"
        WORD "int"
    FUNCTION_DEF
      KW_FUNCTION "function"
      WORD "Current"
      PARAMETER_LIST
        L_PAREN "("
        PARAMETER "self = null"
          WORD "self"
          EQUALS "="
          WORD "null"
        R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR
          L_BRACE "{"
          PATH_EXPR "self.value"
            WORD "self"
            DOT "."
            WORD "value"
          R_BRACE "}"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LambdaDefault"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let f"
              KW_LET "let"
              WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "x"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
                EQUALS "="
                INTEGER_LITERAL "1"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR "{ x }"
              L_BRACE "{"
              WORD "x"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG "2"
              INTEGER_LITERAL "2"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Filtered"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "query"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      COMMA ","
      PARAMETER
        WORD "filter"
        COLON ":"
        TYPE_EXPR "string?"
          WORD "string"
          QUESTION "?"
        EQUALS "="
        WORD "null"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          PATH_EXPR "query.length"
            WORD "query"
            DOT "."
            WORD "length"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OptionalNameMismatch"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let f"
                KW_LET "let"
                WORD "f"
              COLON ":"
              TYPE_PATTERN
                TYPE_EXPR "NamedLimit"
                  WORD "NamedLimit"
          EQUALS "="
          WORD "Filtered"
        CALL_EXPR
          WORD "f"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG
              STRING_LITERAL "cats"
                QUOTE """
                WORD "cats"
                QUOTE """
            COMMA ","
            CALL_ARG
              WORD "limit"
              EQUALS "="
              STRING_LITERAL "recent"
                QUOTE """
                WORD "recent"
                QUOTE """
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
